# alpha-trading

./: .gitignore
01 Project/: Folders.docx  Market_Trading.docx
03 Research/: 01_First_Market_Analysis.ipynb  01_Moving_Average_Backtest.ipynb  02_Momentum_Strategy.ipynb  03_StartCode.ipynb
05 Python/: README.md  dashboard.py  pyproject.toml  requirements.txt
05 Python/Notebooks/: FTSE_Sprint09_Paper_Trading.ipynb  Sprint03_Momentum_Package.ipynb  Sprint04_Strategy_Library.ipynb  Sprint04b_Regime_And_Shorts.ipynb  Sprint05_Backtesting_Engine.ipynb  Sprint06_Performance_Analytics.ipynb  Sprint06b_Multi_Period_Comparison.ipynb  Sprint07_Scanning_Engine.ipynb  Sprint08b_FTSE100_Universe.ipynb  Sprint09_Paper_Trading-Copy1.ipynb  Sprint09_Paper_Trading.ipynb
05 Python/alpha/: __init__.py  analytics.py  backtest.py  config.py  dashboard_data.py  data.py  portfolio.py  position_sizing.py  regime.py  scanner.py  trade_journal.py  universes.py  visualization.py
05 Python/alpha/strategies/: __init__.py  breakout.py  mean_reversion.py  momentum.py  trend_following.py
05 Python/universes/universes/: ftse100.csv
