[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha"
version = "0.4.0"
description = "Alpha Trading Research Platform"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "yfinance",
    "matplotlib",
    "streamlit",
]

[tool.setuptools.packages.find]
include = ["alpha*"]
